# Semantic-Scene-Segmentation

./: .gitignore  README.md  ensemble_test.py  pyproject.toml  requirements.txt  test_segmentation.py  train_deeplabv3.py  train_segformer.py  train_segmentation.py
frontend/: app.py  dummy_segmentation.py  model_inference.py  path_planner.py  requirements.txt  segmentation.py  test_integration.py  visualization.py
